test/good/tdesynch.ept
node f<[a,b]>(x:int) = (y:int)
let
    y = [b <- a](x)
tel
