test/bad/bad_bounded_int.ept
node main(x:int{<0}) = (y:bool)
let
  y = merge x (0 -> true) (1 -> false);
tel
